syntax = "proto3";

option java_package = "com.inke.msg";
option go_package = ".;game";


message C2S_Heart
{
	string		uid				=	1;
	string roomId      = 2;
}

message S2C_Heart
{
	string		roomId			=	1;
	int64		timeStamp		=	2;
}

